...
        expanded = show && enabled,
        onExpandedChange = {
            show = !show
        }
    ) {
        OutlinedTextField(
            modifier = Modifier.testTag("DropDownField")
                .focusable(false)
                .fillMaxWidth()
                .menuAnchor(),
            enabled = enabled,
            readOnly = true,
            textStyle = textStyle,
...
        ExposedDropdownMenu(
            expanded = show && enabled,
            onDismissRequest = { show = false },
            Modifier.testTag("DropdownMenu")
        ) {
            list.forEach { selectionOption ->
                DropdownMenuItem(
                    modifier = Modifier.testTag("DropdownMenuItem"),
                    text = {
                        Text(text = selectionOption)
                    },
                    onClick = {
                        onValueChange(selectionOption)
...
